<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_bookmark_selected"
        android:icon="@drawable/ic_bookmark_border_24"
        android:title="@string/action_bookmark_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_history"
        android:title="@string/history_clear"
        app:showAsAction="ifRoom" />

</menu>
